# H2-Mapping

./: .gitignore  .gitmodules  README.md
mapping/: h2mapping.yaml  install.sh
mapping/configs/realsense/: realsense.yaml  tower.yaml
mapping/demo/: parser.py  run_mapping.py  view.py  vis_utils.py
mapping/eval/: eval_color.py  eval_recon.py  record_video.py
mapping/scripts/: download_replica_mesh.sh
mapping/src/: H2Mapping.py  criterion.py  frame.py  loggers.py  mapping.py  se3pose.py
mapping/vis/: vis_mesh.py  viz.py
ros_cmd/: run_realsense.sh  run_vins_rgbd.sh
src/dvins/: README.md
src/dvins/vins_estimator/: CMakeLists.txt  package.xml
src/dvins/vins_estimator/cmake/: FindPangolin.cmake
src/dvins/vins_estimator/launch/: bigai.launch  comp.launch  euroc.launch  pku.launch  realsense.launch  stereo_to_depth.launch  tstone.launch  tum.launch  uav2022.launch  uav_fisheye.launch  uav_loc_mono.launch  uav_loc_rgbd.launch  uav_loc_stereo.launch  uav_nerf.launch  uav_pinhole.launch  uav_rgbd.launch
src/dvins/vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  feature_tracker.cpp  feature_tracker.h  parameters.cpp  parameters.h
src/dvins/vins_estimator/src/factor/: depth_factor.cpp  depth_factor.h  imu_factor.h  integration_base.h  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_xyz_factor.cpp  projection_xyz_factor.h
src/dvins/vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_sfm.cpp  initial_sfm.h  relative_pose.cpp  relative_pose.h
src/dvins/vins_estimator/src/utility/: utility.h  visualization.cpp  visualization.h
(+60 files in other folders)
